[fix]: Enable menu toggle button visibility on smartphone previews

--- a/public/css/meal_maker.css
+++ b/public/css/meal_maker.css
@@ -15,10 +15,11 @@
     color: black;
 }
 
-.nav-link, .navbar-brand, .navbar-toggler, .navbar-toggler-icon{
+.nav-link, .navbar-brand, .navbar-toggler{
     color: white;
 }
 
 .navbar-toggler-icon {
-    background-color: white;
+    color: black;
+    background-color: green;
 }
